# renderupt

./: Cargo.toml  README.md
src/: engine.rs  main.rs  window.rs
src/engine/: buffer.rs  camera.rs  commands.rs  descriptors.rs  device.rs  frame.rs  mesh.rs  pipeline.rs  renderpass.rs  scene.rs  swapchain.rs  sync.rs
src/shaders/: descs.vert  trimesh.vert
