[package]
name = "vkguide-erupt"
version = "0.1.0"
authors = ["tehid <tehidiot@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erupt = { version = "0.18" }
winit = "0.25.0"
libloading = "0.7.0"
vk-shader-macros = "0.2.7"  
gpu-alloc-erupt = "0.4.0"
gpu-alloc = "0.4.5"
bytemuck = {version = "1.5.1", features = ["extern_crate_alloc"]}
nalgebra = {version = "0.26.2", features = ["bytemuck","serde-serialize"]}
nalgebra-glm = "0.12.0" 
memoffset = "0.6.3"
bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] }
bytemuck_derive = "1.0.1"
tobj = "3.0.0"
obj = "0.10.2" 